# weasel

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: README.md
examples/autosave/: README.md  main.rs  sink.rs
examples/initiative/: README.md  main.rs  rules.rs
examples/king_of_the_hill/: README.md  main.rs  rules.rs  tcp.rs
examples/passive/: README.md  main.rs  rules.rs
examples/pirates/: README.md  game.rs  main.rs  rules.rs
examples/space/: README.md  main.rs  rules.rs
examples/status/: README.md  main.rs  rules.rs
examples/undo/: README.md  main.rs  rules.rs
examples/user_event/: README.md  main.rs  rules.rs
resources/: client.drawio  event.drawio  server.drawio
src/: ability.rs  actor.rs  battle.rs  character.rs  client.rs  creature.rs  entity.rs  entropy.rs  error.rs  event.rs  fight.rs  history.rs  lib.rs  metric.rs  object.rs  player.rs  power.rs  random.rs  round.rs  serde.rs  server.rs  space.rs  status.rs  team.rs  user.rs  util.rs
src/rules/: ability.rs  empty.rs  entropy.rs  generic.rs  mod.rs  statistic.rs  status.rs
tests/: ability.rs  ability_test.rs  actor.rs  actor_test.rs  battle.rs  battle_test.rs  character.rs  character_test.rs  client_server.rs  client_server_test.rs  creature.rs  creature_test.rs  entity.rs  entity_test.rs  entropy.rs  entropy_test.rs  event.rs  event_test.rs  fight.rs  fight_test.rs  helper.rs  history.rs  history_test.rs  object.rs  object_test.rs  power_test.rs  round.rs  round_test.rs  space.rs  space_test.rs  status.rs  status_test.rs  team.rs  team_test.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
