[package]
name = "weasel"
version = "0.5.0"
authors = ["Trisfald <trisfald@gmail.com>"]
edition = "2018"
description = "A customizable battle system for turn-based games."
readme = "README.md"
repository = "https://github.com/Trisfald/weasel"
documentation = "https://docs.rs/weasel"
keywords = ["game", "weasel", "turn-based"]
categories = ["game-development"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
random = ["rand", "rand_pcg"]
serialization = ["serde"]

[dependencies]
num-traits = "0.2"
log = "0.4"
indexmap = "1.3"
rand = { version = "0.7", optional = true }
rand_pcg = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
util = { path = "utilities" }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "ability-tests"
path = "tests/ability.rs"

[[test]]
name = "actor-tests"
path = "tests/actor.rs"

[[test]]
name = "battle-tests"
path = "tests/battle.rs"

[[test]]
name = "character-tests"
path = "tests/character.rs"

[[test]]
name = "client-server-tests"
path = "tests/client_server.rs"

[[test]]
name = "entity-tests"
path = "tests/entity.rs"

[[test]]
name = "entropy-tests"
path = "tests/entropy.rs"
required-features = ["random"]

[[test]]
name = "event-tests"
path = "tests/event.rs"

[[test]]
name = "fight-tests"
path = "tests/fight.rs"

[[test]]
name = "history-tests"
path = "tests/history.rs"

[[test]]
name = "object-tests"
path = "tests/object.rs"

[[test]]
name = "round-tests"
path = "tests/round.rs"

[[test]]
name = "space-tests"
path = "tests/space.rs"

[[test]]
name = "status-tests"
path = "tests/status.rs"

[[test]]
name = "team-tests"
path = "tests/team.rs"

[[example]]
name = "pirates"
required-features = ["random", "serialization"]

[[example]]
name = "autosave"
required-features = ["serialization"]

[[example]]
name = "user-event"
path = "examples/user_event/main.rs"
required-features = ["serialization"]

[[example]]
name = "space"

[[example]]
name = "initiative"
required-features = ["random"]

[[example]]
name = "undo"

[[example]]
name = "passive"

[[example]]
name = "status"
